# lk-utils

./: .gitignore  CHANGELOG-zh.md  CHANGELOG.md  CHANGELOG.zh.md  README.md  README.zh.md  pyproject.toml  requirements.txt
archived/nlp/resource/: 拼音表(扩展集)+韦氏拼音表(扩展集)_前缀树.json
changelog/: char_converter.txt  chinese_name_processor.txt  data_convert.txt  easy_launcher.md  easy_launcher.txt  excel_reader.md  excel_reader.txt  excel_writer.md  excel_writer.txt  exit_ways.txt  file_combinator.txt  filesniff.md  filesniff.txt  lk_browser.txt  lk_config.txt  lk_utils.md  lk_utils.txt  name_formatter.txt  read_and_write.md  read_and_write.txt  regex_helper.txt  time_utils.txt  tree_and_trie.txt
changelog/depreciated/: lk_wrapper.txt
docs/: efficiency-of-semantic-slicing.zh.md  filename-extension-form-in-design-thinking.zh.md  filesniff.md  lk_logger.md  打包说明.md
examples/: _sample.csv  _sample.json  _sample.yaml  copy_file.py  list_paths.py  read_file.py  timestamp.py  write_file.py
lk_utils/: __init__.py  __main__.py  _typing.py  char_converter.py  chinese_name_processor.py  chunk.py  common_typing.py  concurrency.py  data_convert.py  easy_launcher.py  excel_reader.py  excel_writer.py  exit_ways.py  filesniff.py  importer.py  io.py  ipython.py  lk_browser.py  lk_config.py  progress.py  read_and_write.py  regex.py  runner.py  strict_yaml_parser.py  subproc.py  text_slicer.py  textwrap.py  time.py  time_utils.py  tree_and_trie.py  uuid.py
lk_utils/binding/: __init__.py  binding.py  reactive.py  signal.py
lk_utils/excel/: __init__.py  excel_writer.py
lk_utils/filesniff/: __init__.py  finder.py  main.py  shutil.py
lk_utils/filesys/: __init__.py  checker.py  env.py  finder.py  main.py  path.py  shutil.py
lk_utils/nlp/resource/metadata/more/: 韦氏拼音拼构原理.doc
lk_utils/resource/: 拼音表(标准集)+韦氏拼音表(扩展集)_前缀树.json
lk_utils/resource/metadata/: lexicon_generator.py
lk_utils/subproc/: __init__.py  background_activity.py  coroutine.py  multiprocess.py  promise.py  subprocess.py  threading.py
lk_utils/time_utils/: __init__.py  time.py  timeit.py
lk_utils/typehint/: excel_rw.py  filesniff.py  read_and_write.py
test/: break_into_ipython.py  chunk_test.py  delay_prints.py  filesniff_test.py  force_stop_coro.py  fs_finder_test.py  popen_no_stuck_printing.py  py7zr_test.py  pycompatible_test.py  repeat_calling_coro_task.py  semantic_slicer.py  strict_yaml_parser_test.py  subproc_test.py  time_test.py  timeit_test.py
test/_sample_yaml_files/: dict.yaml  nested_dict.yaml
tests/: subproc_test.py  test_excel_utils.py
unit_test/: excel_writer_test.py
unittests/: circular_signal.py  indeterminate_progress.py  signal_test.py  subproc_test.py  test_filesniff.py  test_subproc.py
