[project]
name = "lk-utils"
version = "3.6.0b4"
description = "A set of utility wrappers made for data processing."
authors = [{ name = "Likianta", email = "likianta@foxmail.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "argsense>=1.2.0a2",
    "neoprint>=0.1.0a6; python_version >= '3.10'",
    "psutil>=7.2.2",
    "pyyaml>=6.0.0",
    "rich>=15.0.0",
    # "typing-extensions>=4.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "ipython>=9.13.0; python_version >= '3.12'",
    "lk-logger>=6.0.8a1",
    "py7zr>=1.1.0; python_version >= '3.10'",
    "xlrd==1.2.0",
    "xlsxwriter>=3.2.9",
    "zstandard>=0.25.0",
]

[project.optional-dependencies]
all = [
    "ipython>=9.12.0; python_version >= '3.12'",
    "py7zr>=1.1.0; python_version >= '3.10'",
    "toml>=0.10.2; python_version < '3.11'",
    "xlrd==1.2.0",
    "xlsxwriter>=3.2.9",
    "zstandard>=0.25.0; python_version < '3.14'",
]
dbg = [
    "ipython>=9.12.0; python_version >= '3.12'"
]
exl = [
    "xlrd==1.2.0",
    "xlsxwriter>=3.2.9",
]
io = [
    "toml>=0.10.2; python_version < '3.11'",
    "xlrd==1.2.0",
    "xlsxwriter>=3.2.9",
]
tml = [
    "toml>=0.10.2",
]
zip = [
    "py7zr>=1.1.0; python_version >= '3.10'",
    "zstandard>=0.25.0; python_version < '3.14'"
]

# [project.scripts]
# lkrun = "lk_utils.runner:run"

[project.urls]
homepage = "https://github.com/likianta/lk-utils"

[tool.hatch.build.targets.wheel]
packages = ["lk_utils"]

[tool.ruff]
line-length = 80

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint.isort]
force-single-line = true
no-sections = true

[tool.ruff.per-file-ignores]
"__init__.py" = ["F401", "F403"]

[tool.ty.rules]
invalid-type-form = "ignore"

[[tool.uv.index]]
name = "tsinghua"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
default = true

[[tool.uv.index]]
name = "likianta"
url = "http://localhost:2191/"
explicit = true

[tool.uv.sources]
argsense = { index = "likianta" }
lk-logger = { index = "likianta" }
neoprint = { index = "likianta" }
